--- a/src/style/variable.scss
+++ b/src/style/variable.scss
@@ -1,3 +1,12 @@
 // 配置项目的 scss 全局变量
 $color: red;
 $cv: cover;
+
+// 侧边栏宽度
+$sider-width: 250px;
+
+// 侧边栏 logo 字体颜色
+$sider-logo-color: var(--text-color);
+
+// 侧边栏 logo 字体大小
+$sider-logo-fontSize: 20px;
